--- a/pages/materials.html
+++ b/pages/materials.html
@@ -202,24 +202,21 @@
               <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
               <script src="scripts/vue.js"></script>
               <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
-              <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+              <script src="../scripts/jquery-3_3_1.js"></script>
           </body>
           <script>
             $('.materials-videos > .more').click( function() {
             $('.materials-videos  .hidden-materials').slideToggle("slow");
-            return false;
             });
           </script>
           <script>
                 $('.materials-screenshots > .more').click( function() {
                 $('.materials-screenshots  .hidden-materials').slideToggle("slow");
-                return false;
                 });
               </script>
           <script>
             $('.materials-illus > .more').click( function() {
             $('.materials-illus  .hidden-materials').slideToggle("slow");
-            return false;
             });
           </script>
           
