Исправил путь к jquery

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="scripts/vue.js"></script>
         <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
-        <script src="../scripts/jquery-3_3_1.js"></script>
+        <script src="scripts/jquery-3_3_1.js"></script>
         <script>
             $('.jaina > img').click( function() {
             $('.infokult').slideToggle("slow");
