--- a/pages/newspage.html
+++ b/pages/newspage.html
@@ -74,41 +74,14 @@
                 <h1 style="border-bottom: 2px black solid ">Новость дня</h1>
                 <a href="../pages/news1.html">
                     <div class="new-of-day">
-                        <p align="bottom">WoW: Битва за Азерот — альфа версия [обзор маунта Трилобит]</p>
+                        <p>обзор маунта Трилобит</p>
                     </div>
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-8 news-other">
+            <div id="news" class="col-xs-12 col-md-8 news-other">
                 <h1>Новости</h1>
-                <div class="new">
-                    <a href="../pages/news1.html"><h1>WoW: Битва за Азерот — альфа версия [обзор маунта Трилобит]</h1></a> 
-                    <div>
-                        <p>Датамайнеры из Wowhead нашли очередного нового маунта в Battle for Azeroth.
-
-                        Трилобиты — это существа, которых игроки Орды повстречают во время прокачки в Вол'дуне.</p>
-                        <img src="../assets/bfa-logo-black.jpg">
-                    </div>
-                </div>
-                <div class="new" >
-                    <a href="../pages/news2.html"><h1>WoW: Битва за Азерот — альфа версия [ранний обзор локации Вол'дун]</h1></a>
-                    <div>
-                        <p>Смотрим на новинки дополнения Battle for Azeroth, которые были добавлены в сборке #26367 на альфа–сервера.
-
-                        Сейчас предлагаю ознакомиться с новой локацией Вол'дун, которая расположена в Зандаларе и это родной край Вульперов.</p>
-                        <img src="../assets/bfa-logo-black.jpg">
-                     </div>
-                </div>
-
-                <div class="new">
-                        <a href="../pages/news3.html"><h1>WoW: Битва за Азерот — альфа версия [обновление столицы Альянса — Боралус в сборке #26287]</h1></a>
-                        <div>
-                            <p>На альфа–серверах Battle for Azeroth в очередной раз обновлена столица Альняса — Боралус, случилось это еще в сборке #26287 и я упустил этот момент.
-        
-                            Поэтому, исправляюсь и публикую новинки и изменения, которые были найдены в сборке #26287.</p>
-                            <img src="../assets/bfa-logo-black.jpg">
-                        </div>
-                </div>
+                <newsother v-for="info in news" :inner="info"></newsother>
             </div>
         </div>
     </div>
@@ -130,9 +103,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-        <script src="../scripts/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="../scripts/newspage.js"></script>
         <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
     </body>
 
 </html>
