Новый вид страниц союзных рас на примере Эльфов Бездны

--- a/pages/newspage.html
+++ b/pages/newspage.html
@@ -70,16 +70,16 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-xs-8 col-md-6">
+            <div class="col-xs-12 col-lg-6">
                 <h1 style="border-bottom: 2px black solid ">Новость дня</h1>
                 <a href="../pages/news1.html">
                     <div class="new-of-day">
-                        <p>обзор маунта Трилобит</p>
+                        <p>Обзор маунта Трилобит</p>
                     </div>
                 </a>
             </div>
 
-            <div id="news" class="col-xs-12 col-md-8 news-other">
+            <div id="news" class="col-xs-12 col-lg-8 news-other">
                 <h1>Новости</h1>
                 <newsother v-for="info in news" :inner="info"></newsother>
             </div>
