--- a/pages/HighmountainTauren.html
+++ b/pages/HighmountainTauren.html
@@ -6,13 +6,14 @@
         <meta name="author" content="Пустовгаров Захар">
         <meta http-equiv="Content-Type" content="text/html">
         <meta name="description" content="Таурены Крутогорья">
-        <meta name="keywords" content="WoW, world of warcrafrt, BfA, Battle for Azeroth, новинки">
+        <meta name="keywords" content="WoW, world of warcrafrt, BfA, Battle for Azeroth, союзные расы, Таурены">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet">
         <link href="../styles/allies-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/highmountainTauren-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/footer.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="shortcut icon" href="../assets/wow.ico" type="text/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
     </head>
