--- a/pages/LightforgedDrenei.html
+++ b/pages/LightforgedDrenei.html
@@ -11,6 +11,7 @@
         <link href="../styles/allies-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/lightforgedDrenei-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/footer.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="shortcut icon" href="../assets/wow.ico" type="text/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
