--- a/pages/VoidElf.html
+++ b/pages/VoidElf.html
@@ -11,6 +11,7 @@
         <link href="../styles/allies-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/voidElf-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/footer.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="shortcut icon" href="../assets/wow.ico" type="text/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,75 +72,79 @@
                     </div>
         
     <div class="row aboutallies">
-        <div class="col-xs-12 col-md-6">
-            <p id="text">
-            {{title}}
-            <br><br>
-            {{description}}
+        <div class="col-xs-12 w-100">
+            <p class="title" align="center">
+                {{title}}
             </p>
-            <div class="row justify-content-center align-items-center" id="images">
-                <div class="col-xs-12 col-md-4">
-                    <img v-bind:src="source1">
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <img v-bind:src="source2">
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <img v-bind:src="source3">
-                </div>
-            </div>
         </div>
         <div class="col-xs-12 col-md-6" id="gender-switcher">
+            <p class="text">
+                {{description}}
+            </p>
             <div id="switchers">
                 <div @click="maleon=true,femaleon=false" id="male">
-                    <p align="center">Муж.</p>
+                    <p align="center">Мужчина</p>
                 </div>
 
                 <div @click="maleon=false,femaleon=true" id="female">
-                    <p align="center">Жен.</p>
+                    <p align="center">Женщина</p>
                 </div>
             </div>
             <img v-bind:src="male" v-show="maleon">
             <img v-bind:src="female" v-show="femaleon" >
-            <div id="carouselExampleIndicators" class="carousel slide allies-carousel" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div class="carousel-padding d-block w-100">
-                        <iframe class="w-100" src="https://www.youtube.com/embed/FrfllwA36fw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="carousel-padding d-block w-100">
-                        <iframe class="w-100" src="https://www.youtube.com/embed/9VklHnLhoc8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="carousel-padding d-block w-100">
-                        <iframe class="w-100" src="https://www.youtube.com/embed/o2OGHb6tOIE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="carousel-padding d-block w-100">
-                        <iframe class="w-100" src="https://www.youtube.com/embed/KXN8AHYA9jE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Предыдущий</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Следующий</span>
-                </a>
+           
         </div>
-        </div> 
+        <div class="col-xs-12 col-md-6">
+                <div class="row justify-content-center align-items-center" id="images">
+                    <div class="col-xs-12 col-md-4">
+                        <img v-bind:src="source1">
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <img v-bind:src="source2">
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <img v-bind:src="source3">
+                    </div>
+                </div>
+                <div id="carouselExampleIndicators" class="carousel slide allies-carousel" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <div class="carousel-padding d-block w-100">
+                                <iframe class="w-100" src="https://www.youtube.com/embed/FrfllwA36fw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <div class="carousel-padding d-block w-100">
+                                <iframe class="w-100" src="https://www.youtube.com/embed/9VklHnLhoc8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <div class="carousel-padding d-block w-100">
+                                <iframe class="w-100" src="https://www.youtube.com/embed/o2OGHb6tOIE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <div class="carousel-padding d-block w-100">
+                                <iframe class="w-100" src="https://www.youtube.com/embed/KXN8AHYA9jE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Предыдущий</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Следующий</span>
+                        </a>
+                </div>
+            </div>
     </div>
     <footer>
         <div>
@@ -161,12 +166,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
         <script>
-           var text = new Vue({
-                el:'#text',
+           var title = new Vue({
+                el:'.title',
                 data: {
-                    title:'ЭЛЬФЫ БЕЗДНЫ',
+                    title:'ЭЛЬФЫ БЕЗДНЫ'
+                }    
+            })
+            var text = new Vue({
+                el:'.text',
+                data: {
                     description:'Многие пытались обуздать тлетворную магию Бездны, но для большинства эти попытки оканчивались лишь безумием. Аллерия Ветрокрылая твердо решила использовать эту силу на благо Азерота, и ей первой удалось не поддаться влиянию тьмы. Придя на помощь своим сородичам, из последних сил сопротивлявшимся мраку, Аллерия поклялась научить эльфов Бездны управлять темной энергией, чтобы те могли использовать свой новый дар во благо Альянса.'
                 }
             })
