Подкорректировал значения размеров некоторых элементов для некоторых стилей

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <img class="featicons" src="assets/newlvl.png" alt="" >
                                 <p class="text-center">НОВЫЙ МАКСИМАЛЬНЫЙ УРОВЕНЬ</p>
                                 <p class="text-center">
-                                    По мере развития персонажа до 120-го уровня вам предстоит остановить распространение порчи кровавого бога, открыть тайны древней сокровищницы титанов и принять участие во множестве увлекательных приключений.
+                                    По мере развития персонажа до 120-го уровня вам предстоит остановить распространение порчи кровавого бога и принять участие во множестве увлекательных приключений.
                                 </p>
                             </div>
                             <div class="col-md-3 col-sm-6 col-xs-12 feat">
