--- a/pages/HighmountainTauren.html
+++ b/pages/HighmountainTauren.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Пустовгаров Захар">
         <meta http-equiv="Content-Type" content="text/html">
         <meta name="description" content="Таурены Крутогорья">
-        <meta name="keywords" content="WoW, world of warcrafrt, BfA, Battle for Azeroth, союзные расы, Таурены">
+        <meta name="keywords" content="WoW, world of warcrafrt, BfA, Battle for Azeroth, союзные расы, Таурены Крутогорья">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet">
         <link href="../styles/allies-st.css" type="text/css" rel="stylesheet">
         <link href="../styles/highmountainTauren-st.css" type="text/css" rel="stylesheet">
@@ -67,7 +67,7 @@
             <div class="container-fluid other">
                     <div class="container-fluid other">
                             <div class="row no-border justify-content-center">
-                                    <div class="col-xs-12  col-md-6 col-lg-4 ">
+                                    <div class="col-xs-12  col-md-9 col-lg-4 ">
                                         <img  src="../assets/bfa-logo.png" class="bfa-logo" width="100%" alt="logo" align="center">
                                     </div>
                             </div>
@@ -78,7 +78,7 @@
                                             {{title}}
                                         </p>
                                     </div>
-                                    <div class="col-xs-12 col-md-6" id="gender-switcher">
+                                    <div class="col-xs-12 col-lg-6" id="gender-switcher">
                                         <p class="text">
                                             {{description}}
                                         </p>
@@ -95,7 +95,7 @@
                                         <img v-bind:src="female" v-show="femaleon" >
                                        
                                     </div>
-                                    <div class="col-xs-12 col-md-6">
+                                    <div class="col-xs-12 col-lg-6">
                                             <div class="row justify-content-center align-items-center" id="images">
                                                 <div class="col-xs-12 col-md-4">
                                                     <img v-bind:src="source1">
