Подкорректировал планшетную версию материалов

--- a/pages/materials.html
+++ b/pages/materials.html
@@ -74,7 +74,7 @@
         
         
         <div class="row material justify-content-center">
-            <div class="col-xs-12  col-md-8">
+            <div class="col-xs-12  col-lg-8">
                 <div class="materials-videos content-center">
                     <p>ВИДЕО</p>
                     <iframe class="first-item" src="https://www.youtube.com/embed/Xv1JzYDKoc8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
