Подкоррректировал планшетную версию новостей

--- a/pages/news1.html
+++ b/pages/news1.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class=" content col-xs-12  col-md-8">
+            <div class=" content col-xs-12  col-lg-8">
                     <h1>WoW: Битва за Азерот — альфа версия [обзор маунта Трилобит]</h1>
                     <img src="../assets/trilobit-1.jpg" alt="trilo">
                     <p>Датамайнеры из Wowhead нашли очередного нового маунта в Battle for Azeroth.
@@ -86,7 +86,7 @@
         </div>
 
     <div class="row justify-content-center">
-        <div class="content col-xs-12  col-md-8 comment-col">
+        <div class="content col-xs-12  col-lg-8 comment-col">
             <div id="comments">
                 <h1 align="center">Комментарии пользователей</h1> 
                 <div class="ucomment">
@@ -100,7 +100,7 @@
                         <div>
                             <label for="comment">
                                 <p>Текст комментария:</p>
-                                <textarea v-model="comment" wrap="hard" cols="50" rows="5" name="comment" tabindex="2" required></textarea>
+                                <textarea v-model="comment" wrap="hard" cols="60" rows="3" name="comment" tabindex="2" required></textarea>
                             </label>
                         </div>
                         <button type="submit" v-on:click.prevent="addComment">Отправить</button>
