--- a/pages/news2.html
+++ b/pages/news2.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class=" content col-xs-12  col-md-8">
+            <div class=" content col-xs-12  col-lg-8">
                     <h1>WoW: Битва за Азерот — альфа версия [ранний обзор локации Вол'дун]</h1>
                     <p>Смотрим на новинки дополнения Battle for Azeroth, которые были добавлены в сборке #26367 на альфа–сервера.
                     Сейчас предлагаю ознакомиться с новой локацией Вол'дун, которая расположена в Зандаларе и это родной край Вульперов.</p>
@@ -115,7 +115,7 @@
         </div>
 
     <div class="row justify-content-center">
-        <div class="content col-xs-12  col-md-8 comment-col">
+        <div class="content col-xs-12  col-lg-8 comment-col">
             <div id="comments">
                 <h1 align="center">Комментарии пользователей</h1> 
                 <div class="ucomment">
