--- a/pages/news3.html
+++ b/pages/news3.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class=" content col-xs-12  col-md-8">
+            <div class=" content col-xs-12  col-lg-8">
                     <h1>WoW: Битва за Азерот — альфа версия [обновление столицы Альянса — Боралус в сборке #26287]</h1>
                     <p>На альфа–серверах Battle for Azeroth в очередной раз обновлена столица Альняса — Боралус, случилось это еще в сборке #26287 и я упустил этот момент.
                     Поэтому, исправляюсь и публикую новинки и изменения, которые были найдены в сборке #26287.</p>
@@ -78,25 +78,25 @@
                     плененные силами Праудмуров ордынцы, морская академия Праудмуров близ крепости.</p>
                     <h1>Тюрьма Боралуса (темница)</h1>
                     <div class="row justify-content-center">
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/boralus-prison-1.jpg" alt="1">
                         </div>
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/boralus-prison-2.jpg" alt="2">
                         </div>
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/boralus-prison-3.jpg" alt="3">
                         </div>
                     </div>
                     <h1>Академия Праудмуров</h1>
                     <div class="row justify-content-center">
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/praudmur-academy-1.jpg" alt="1">
                         </div>
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/praudmur-academy-2.jpg" alt="2">
                         </div>
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
                             <img src="../assets/praudmur-academy-3.jpg" alt="3">
                         </div>
                     </div>
@@ -120,7 +120,7 @@
         </div>
 
     <div class="row justify-content-center">
-        <div class="content col-xs-12  col-md-8 comment-col">
+        <div class="content col-xs-12  col-lg-8 comment-col">
             <div id="comments">
                 <h1 align="center">Комментарии пользователей</h1> 
                 <div class="ucomment">
