Подкорректировал размер картинок в .feat

--- a/index.html
+++ b/index.html
@@ -185,28 +185,28 @@
                     <div class="col-sm-12">
                         <p class="text-center">КОНТЕНТ</p> 
                         <div class="row">
-                            <div class="col-md-3 col-sm-6 col-xs-12 feat">
+                            <div class="col-lg-3 col-sm-6 col-xs-12 feat">
                                 <img class="featicons" src="assets/newlvl.png" alt="" >
                                 <p class="text-center">НОВЫЙ МАКСИМАЛЬНЫЙ УРОВЕНЬ</p>
                                 <p class="text-center">
                                     По мере развития персонажа до 120-го уровня вам предстоит остановить распространение порчи кровавого бога и принять участие во множестве увлекательных приключений.
                                 </p>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12 feat">
+                            <div class="col-lg-3 col-sm-6 col-xs-12 feat">
                                 <img class="featicons" src="assets/newdung.png" alt="" align="center">
                                 <p class="text-center">НОВЫЕ ПОДЗЕМЕЛЬЯ И РЕЙДЫ</p>
                                 <p class="text-center">
                                     Сражайтесь в новых подземельях: в золотом городе Атал'Дазаре и в пристанище пиратов — Вольной гавани.
                                 </p>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12 feat">
+                            <div class="col-lg-3 col-sm-6 col-xs-12 feat">
                                 <img class="featicons" src="assets/lvlup.png" alt="" align="center">
                                 <p class="text-center">ПОВЫШЕНИЕ УРОВНЯ</p>
                                 <p class="text-center">
                                     Вы сможете мгновенно повысить уровень уже созданного или нового персонажа до 110-го, чтобы быстрее примкнуть к новым союзникам.
                                 </p>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12 feat">
+                            <div class="col-lg-3 col-sm-6 col-xs-12 feat">
                                 <img class="featicons" src="assets/communitys.png" alt="" align="center">
                                 <p class="text-center">СООБЩЕСТВА</p>
                                 <p class="text-center">
