Добавил много шаблонов и вынес скрипты в отдельные файлы

--- a/pages/news1.html
+++ b/pages/news1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Материалы</title>
+        <title>Обзор маунта Трилобит</title>
         <meta name="author" content="Пустовгаров Захар">
         <meta http-equiv="Content-Type" content="text/html">
         <meta name="description" content="обзор маунта Трилобит">
@@ -70,7 +70,7 @@
         </div>
         <div class="row justify-content-center">
             <div class=" content col-xs-12  col-lg-8">
-                    <h1>WoW: Битва за Азерот — альфа версия [обзор маунта Трилобит]</h1>
+                    <h1>Обзор маунта Трилобит</h1>
                     <img src="../assets/trilobit-1.jpg" alt="trilo">
                     <p>Датамайнеры из Wowhead нашли очередного нового маунта в Battle for Azeroth.
                 
