--- a/pages/HighmountainTauren.html
+++ b/pages/HighmountainTauren.html
@@ -167,40 +167,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script>
-           var text = new Vue({
-                el:'.text',
-                data: {
-                    description:'Таурены Крутогорья — потомки Хална, храброго героя, прославившегося во время Войны древних. Они почитают духов земли, реки и неба. После вторжения Легиона  доверие между племенами было подорвано, но теперь племена Крутогорья вновь объединили свои силы. Они готовы покинуть священную гору, чтобы примкнуть к своим калимдорским сородичам и стать союзниками Орды.'
-                }
-            })
-
-             var title = new Vue({
-                el:'.title',
-                data: {
-                    title:'ТАУРЕНЫ КРУТОГОРЬЯ'
-                }    
-            })
-        
-            var images = new Vue({
-                el:'#images',
-                data: {
-                    source1:'../assets/HighmountainTauren1.png',
-                    source2:'../assets/HighmountainTauren2.png',
-                    source3:'../assets/HighmountainTauren3.png'
-                }
-            })
-        
-            var switcher = new Vue({
-                el:'#gender-switcher',
-                data: {
-                    male:'../assets/HighmountainTauren-male.png',
-                    female:'../assets/HighmountainTauren-female.png',
-                    maleon:true,
-                    femaleon:false
-                }
-            })
-        </script>
+        <script src="../scripts/HighmountainTauren.js"></script>
     </body> 
 </html>
