--- a/pages/nightborne.html
+++ b/pages/nightborne.html
@@ -168,42 +168,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script>
-
-
-            var title = new Vue({
-                el:'.title',
-                data: {
-                    title:'НОЧНОРОЖДЁННЫЕ'
-                }    
-            })
-            var text = new Vue({
-                el:'.text',
-                data: {
-                    description:'Проведя 10 000 лет в изоляции под защитным барьером, эльфы Сурамара стали чрезвычайно зависимы от магической силы Ночного колодца. Чтобы защитить источник своей силы, лидеры ночнорожденных заключили сделку с Пылающим Легионом, ввергнув свое государство в гражданскую войну. Отвоевав свободу у своих хозяев-демонов, ночнорожденные присоединились к Орде в надежде вновь обрести свое место в Азероте.'
-                }
-            })
-            
-     
-            var image =  new Vue({
-                el:'#images',
-                data: {
-                    source1:'../assets/Nightborn1.png',
-                    source2:'../assets/Nightborn2.png',
-                    source3:'../assets/Nightborn3.png'
-                }
-            })
-
-          var switcher = new Vue({
-                el:'#gender-switcher',
-                data: {
-                    male:'../assets/Nightborn-male.png',
-                    female:'../assets/Nightborn-female.png',
-                    maleon:false,
-                    femaleon:true
-                }
-            })
-        </script>
+        <script src="../scripts/Nightborne.js"></script>
     </body> 
 </html>
